assetlinks for ios added

--- a/public/.well-known/apple-app-site-association.json
+++ b/public/.well-known/apple-app-site-association.json
@@ -3,8 +3,8 @@
         "apps": [],
         "details": [
             {
-                "appID": "co.vaar.app",
-                "paths": [ "*" ]
+                "appID": "PLBJHUCZV8.co.vaar.app",
+                "paths": ["/app/*"]
             }
         ]
     }
