assetlinks for ios added

--- a/public/.well-known/apple-app-site-association.json
+++ b/public/.well-known/apple-app-site-association.json
@@ -3,7 +3,7 @@
         "apps": [],
         "details": [
             {
-                "appID": "PLBJHUCZV8.co.vaar.app",
+                "appIDs": ["PLBJHUCZV8.co.vaar.app"],
                 "paths": ["/app/*"]
             }
         ]
