assetlinks for ios added

--- a/public/.well-known/apple-app-site-association.json
+++ b/public/.well-known/apple-app-site-association.json
@@ -4,7 +4,11 @@
         "details": [
             {
                 "appIDs": ["PLBJHUCZV8.co.vaar.app"],
-                "paths": ["/*"]
+                "components": [
+                    {
+                        "/": "/app/*",
+                        "comment": "OAuth redirect from Plaid"
+            }]
             }
         ]
     }
