assetlinks for ios added

--- a/public/.well-known/apple-app-site-association.json
+++ b/public/.well-known/apple-app-site-association.json
@@ -4,11 +4,7 @@
         "details": [
             {
                 "appIDs": ["PLBJHUCZV8.co.vaar.app"],
-                "components": [
-                    {
-                        "/": "/app/*",
-                        "comment": "OAuth redirect from Plaid"
-            }]
+                "paths": ["/app/*"]
             }
         ]
     }
